bk_ida/gccida/c3/if_then_else_cond
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7686:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v42; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7699:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7699:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7700:4: error: expected ';' after expression
rtx v56; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7700:5: error: use of undeclared identifier 'v56'
rtx v56; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7701:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v57; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7706:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7706:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7707:4: error: expected ';' after expression
rtx v63; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7707:5: error: use of undeclared identifier 'v63'
rtx v63; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7709:6: error: use of undeclared identifier 'v65'
rtx *v65; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7710:4: error: expected ';' after expression
rtx v66; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7710:5: error: use of undeclared identifier 'v66'
rtx v66; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7711:6: error: use of undeclared identifier 'v67'
rtx *v67; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7712:6: error: use of undeclared identifier 'v68'
rtx *v68; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7716:4: error: expected ';' after expression
rtx op; // [rsp+18h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7716:5: error: use of undeclared identifier 'op'
rtx op; // [rsp+18h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7717:4: error: expected ';' after expression
rtx v75; // [rsp+20h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/combine.c:7717:5: error: use of undeclared identifier 'v75'
rtx v75; // [rsp+20h] [rbp-58h] BYREF 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/if_then_else_cond/src/obj/combine.o] Error 1
